--- a/index.html
+++ b/index.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message</title>
+    <title>Mensaje de Felicitación</title>
     <style>
         .congratulations {
-            font-size: 48px; /* Tamaño de fuente más grande */
-            color: #4CAF50; /* Color del texto */
-            font-weight: bold; /* Negrita */
-            text-align: center; /* Centrado */
-            margin: 20px 0; /* Margen para separar del resto del contenido */
+            font-size: 48px;
+            color: #4CAF50;
+            font-weight: bold;
+            text-align: center;
+            margin: 20px 0;
         }
         .instagram-link {
-            font-size: 20px; /* Tamaño de fuente grande */
-            color: #E1306C; /* Color específico de Instagram */
-            font-weight: bold; /* Negrita */
-            text-decoration: none; /* Sin subrayado */
-            background-color: #F8F8F8; /* Fondo ligeramente gris */
-            padding: 10px 15px; /* Espaciado interno */
-            border-radius: 5px; /* Bordes redondeados */
-            display: inline-block; /* Para aplicar padding y border-radius */
-            margin: 20px auto; /* Margen, centrado horizontalmente */
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Sombra sutil */
+            font-size: 20px;
+            color: white; /* Texto blanco para mejor contraste */
+            font-weight: bold;
+            text-decoration: none;
+            background-color: #E1306C;
+            padding: 10px 15px;
+            border-radius: 5px;
+            display: inline-block;
+            margin: 10px auto; /* Espaciado reducido entre enlaces */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        }
+        .container {
+            background-color: #FFC300; /* Fondo amarillo */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
         }
         body {
-            font-family: 'Arial', sans-serif; /* Tipo de fuente */
+            font-family: 'Arial', sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
+            background-color: #FF5733; /* Fondo rojo */
         }
     </style>
 </head>
 <body>
-    <p class="congratulations">Congratulations, you've won a free hug.</p>
-    <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Thanks for following me on Instagram: Pitenergy</a>
+    <div class="container">
+        <p class="congratulations">¡Felicidades, has ganado un abrazo gratis!</p>
+        <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: Pitenergy</a>
+        <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: mirallespepo</a>
+    </div>
 </body>
 </html>
