--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
         .container {
-            background-color: #FFC300; /* Fondo amarillo */
+            background-color: #FFFF00; /* Fondo amarillo */
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
@@ -37,15 +37,15 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #FF5733; /* Fondo rojo */
+            background-color: ##FF0000; /* Fondo rojo */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <p class="congratulations">¡Felicidades, has ganado un abrazo gratis!</p>
-        <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: Pitenergy</a>
-        <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: mirallespepo</a>
+        <p class="congratulations">¡Congratulations, you have unlocked a prize. You can choose between a free hug or kiss!</p>
+        <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Thanks for following me on Instagram: Pitenergy</a>
+        <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Thanks for following me on Instagram: Mirallespepo</a>
     </div>
 </body>
 </html>
