--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
         .container {
-            background-color: #FFC300;
+            background-color: #FFFF00;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
