--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         .congratulations {
             font-size: 48px;
-            color: #4CAF50;
+            color: #FF0000;
             font-weight: bold;
             text-align: center;
             margin: 20px 0;
@@ -17,7 +17,7 @@
             color: white;
             font-weight: bold;
             text-decoration: none;
-            background-color: #E1306C;
+            background-color: #FF0000;
             padding: 10px 15px;
             border-radius: 5px;
             display: inline-block;
