--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@
             margin: 10px; /* Espacio alrededor de las imágenes */
             box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Sombra para las imágenes */
         }
+
+        /* Media query para pantallas de menos de 600px de ancho */
+        @media (max-width: 600px) {
+            .congratulations {
+                font-size: 24px; /* Tamaño de fuente más pequeño para dispositivos móviles */
+                margin: 10px 0;
+            }
+            .instagram-link {
+                font-size: 16px; /* Tamaño de fuente más pequeño */
+                padding: 8px 10px; /* Padding más ajustado */
+            }
+            .container {
+                padding: 10px; /* Menos padding */
+                border-radius: 5px; /* Radio de borde ajustado */
+            }
+            .image-container img {
+                max-width: 90%; /* Hace las imágenes más grandes en móviles */
+            }
+        }
     </style>
 </head>
 <body>
