--- a/index.html
+++ b/index.html
@@ -5,32 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mensaje de Felicitación</title>
     <style>
-        .congratulations {
-            font-size: 48px;
-            color: #FF0000;
-            font-weight: bold;
-            text-align: center;
-            margin: 20px 0;
-        }
-        .instagram-link {
-            font-size: 20px;
-            color: white;
-            font-weight: bold;
-            text-decoration: none;
-            background-color: #FF0000;
-            padding: 10px 15px;
-            border-radius: 5px;
-            display: inline-block;
-            margin: 10px auto;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-        }
-        .container {
-            background-color: #FFFF00;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-            text-align: center; /* Asegura que todo el contenido esté centrado */
-        }
         body {
             font-family: 'Arial', sans-serif;
             display: flex;
@@ -40,45 +14,74 @@
             height: 100vh;
             background-color: #FF0000;
         }
-        .image-container {
-            margin-top: 20px; /* Espacio adicional arriba para separar de otros elementos */
-        }
-        img {
-            width: 100%; /* Ajusta la imagen al ancho del contenedor */
-            max-width: 300px; /* Limita el tamaño máximo de la imagen */
-            border-radius: 10px; /* Bordes redondeados para las imágenes */
-            margin: 10px; /* Espacio alrededor de las imágenes */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Sombra para las imágenes */
+
+        .container {
+            background-color: #FFFF00;
+            padding: 2vw; /* Padding relativo */
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+            text-align: center;
+            max-width: 90%; /* Anchura máxima para asegurar la adaptabilidad */
+            margin: auto; /* Centra el contenedor */
         }
 
-        /* Media query para pantallas de menos de 600px de ancho */
+        .congratulations {
+            font-size: 4vw; /* Tamaño de fuente basado en el ancho de la pantalla */
+            color: #FF0000;
+            font-weight: bold;
+            text-align: center;
+            margin: 20px 0;
+            word-wrap: break-word; /* Evita que el texto se salga de su contenedor */
+        }
+
+        .instagram-link {
+            font-size: 2vw; /* Tamaño de fuente adaptativo */
+            color: white;
+            font-weight: bold;
+            text-decoration: none;
+            background-color: #FF0000;
+            padding: 1vw; /* Padding relativo */
+            border-radius: 5px;
+            display: inline-block;
+            margin: 10px auto;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        }
+
+        .image-container {
+            margin-top: 20px;
+        }
+
+        img {
+            width: 100%; /* Asegura que las imágenes sean responsivas */
+            max-width: 300px; /* Limita el tamaño máximo para que no sea demasiado grande */
+            border-radius: 10px;
+            margin: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+
+        /* Media queries para pantallas más pequeñas */
         @media (max-width: 600px) {
             .congratulations {
-                font-size: 24px; /* Tamaño de fuente más pequeño para dispositivos móviles */
-                margin: 10px 0;
+                font-size: 5vw; /* Aumenta el tamaño de fuente para una mejor legibilidad en pantallas pequeñas */
             }
             .instagram-link {
-                font-size: 16px; /* Tamaño de fuente más pequeño */
-                padding: 8px 10px; /* Padding más ajustado */
+                font-size: 3.5vw; /* Ajusta el tamaño de la fuente para los enlaces */
+                padding: 2vw; /* Aumenta el padding para un mejor toque en pantallas táctiles */
             }
             .container {
-                padding: 10px; /* Menos padding */
-                border-radius: 5px; /* Radio de borde ajustado */
-            }
-            .image-container img {
-                max-width: 90%; /* Hace las imágenes más grandes en móviles */
+                padding: 5vw; /* Aumenta el padding para asegurar suficiente espacio alrededor del contenido */
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <p class="congratulations">Congratulations, you have unlocked a prize. You can choose between a free hug or kiss!</p>
-        <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Thanks for following me on Instagram: Pitenergy</a>
-        <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Thanks for following me on Instagram: Mirallespepo</a>
+        <p class="congratulations">¡Felicidades, has desbloqueado un premio! Puedes elegir entre un abrazo gratis o un beso.</p>
+        <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: Pitenergy</a>
+        <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: Mirallespepo</a>
     </div>
     <div class="image-container">
-        <!-- Asegúrate de reemplazar 'URL_DE_LA_IMAGEN_1' y 'URL_DE_LA_IMAGEN_2' con las URLs reales de tus imágenes -->
+        <!-- Asegúrate de reemplazar 'pepopeter.jpg' con la URL real de tu imagen -->
         <img src="pepopeter.jpg" alt="Descripción de la imagen 1">
     </div>
 </body>
