--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
 
+        .event-text {
+            color: #FFFFFF; /* o el color que prefieras para el texto */
+            font-size: 1.5rem; /* Tamaño de fuente para el texto adicional */
+            text-align: center; /* Centra el texto */
+            margin-bottom: 20px; /* Espacio antes de la imagen */
+        }
+
         @media (max-width: 600px) {
             .congratulations {
                 font-size: 6vw;
@@ -80,6 +87,7 @@
         <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: Mirallespepo</a>
     </div>
     <div class="image-container">
+        <p class="event-text">We met at Tomorrowland 2019, we discovered EDC Las Vegas together in 2022 and here we are, fulfilling another dream at Ultra Miami 2024. My brother from another mother.</p>
         <img src="pepopeter.jpg" alt="Descripción de la imagen 1">
     </div>
 </body>
