--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
         }
 
         .image-container {
-            margin-top: 10px;
+            text-align: center; /* Esto asegura que todo el contenido esté centrado */
+            margin-top: 20px;
         }
 
         img {
-            width: 80%; /* Reducir el ancho de la imagen */
-            max-width: 240px; /* Establecer un tamaño máximo más pequeño */
+            width: 80%; /* Ajusta el ancho como prefieras */
+            max-width: 240px; /* Ajusta el tamaño máximo como prefieras */
             border-radius: 10px;
-            margin: 10px;
+            display: block; /* Esto hace que la imagen sea un bloque y respete el margen auto */
+            margin: 10px auto; /* Centra la imagen horizontalmente */
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
 
