--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 </head>
 <body>
     <div class="container">
-        <p class="congratulations">¡Felicidades, has desbloqueado un premio! Puedes elegir entre un abrazo gratis o un beso.</p>
-        <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: Pitenergy</a>
-        <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Gracias por seguirme en Instagram: Mirallespepo</a>
+        <p class="congratulations">Congratulations, you've unlocked a prize! You can choose between a free hug or a free kiss!</p>
+        <a href="https://www.instagram.com/pitenergy/" target="_blank" class="instagram-link">Thanks for following me on Instagram: Pitenergy</a>
+        <a href="https://www.instagram.com/mirallespepo/" target="_blank" class="instagram-link">Thanks for following me on Instagram: Mirallespepo</a>
     </div>
     <div class="image-container">
         <p class="event-text">We met at Tomorrowland 2019, we discovered EDC Las Vegas together in 2022 and here we are, fulfilling another dream at Ultra Miami 2024. My brother from another mother.</p>
